Add react app to desktop application

--- a/GAT-desktop/src/web/index.html
+++ b/GAT-desktop/src/web/index.html
@@ -8,9 +8,11 @@
     <title>GAT</title>
   </head>
   <body>
-    <h1>Velkommen til dit GDPA Assistance Tool</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+      <h1>
+          Title
+      </h1>
+    <div id="app">
+        
+    </div>
   </body>
 </html>
