--- a/GAT-desktop/src/web/index.html
+++ b/GAT-desktop/src/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://login.microsoftonline.com https://graph.microsoft.com; script-src 'self' ">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <title>GAT</title>
   </head>
