--- a/GAT-desktop/src/web/index.html
+++ b/GAT-desktop/src/web/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <title>GAT</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="bg-orange-50">
+    <div id="app" ></div>
   </body>
 </html>
